fixing bug #28974 : overflow in array_slice() The same kind of overflow appeared in array_splice(), substr() and substr_replace()